# static-subid

./: CMakeLists.txt  LICENSE  static-subid.spec
config/: CMakeLists.txt  static-subid.conf
docs/: CMakeLists.txt  README.md  README.systemd  static-subid.adoc  static-subid.conf.adoc
src/: CMakeLists.txt  autoconf.h.in  config.c  main.c  range.c  static-subid.h  subid.c  syscall_ops.h  syscall_ops_default.c  util.c  validate.c
systemd/: CMakeLists.txt
systemd/polkit/: 50-static-subid.rules
systemd/system/: static-subid@.service.in
systemd/user/: setup-static-subid.service
test/: CMakeLists.txt  test_config.c  test_range.c  test_subid.c  test_util.c  test_validate.c
test/test_helpers/: all.h  test_helper_mock_alloc.h  test_helper_mock_file.h  test_helper_mock_stat.h  test_helper_passwd.h  test_helper_username.h
